# p2p-data-analysis

./: README.md  pyproject.toml
Connections/: histogram.py  question2.py  question4.py  questions.md
Data Mining/: data_mining.ipynb
