[tool.poetry]
name = "p2p-data-analysis"
version = "0.1.0"
description = ""
authors = ["Sylvain Hazard"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.2"
jupyter = "^1.0.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
